[gd_scene load_steps=43 format=3 uid="uid://bf0iuaxy6a5uj"]

[ext_resource type="Script" path="res://mobs/goblin/Goblin.gd" id="1_o2gk8"]
[ext_resource type="Shader" path="res://art/Shader/Blink.gdshader" id="2_1lj64"]
[ext_resource type="Texture2D" uid="uid://dw8p0qxqahnwh" path="res://mobs/goblin/goblin.png" id="3_wnixq"]
[ext_resource type="PackedScene" uid="uid://dpg8igdyy7wcb" path="res://scenes/Box/New/hitBox.tscn" id="5_jst8g"]
[ext_resource type="PackedScene" uid="uid://8mk0il1s3w4j" path="res://scenes/Box/New/hurt_box.tscn" id="6_q4xxe"]
[ext_resource type="PackedScene" uid="uid://d3q5a0ppcdkug" path="res://scenes/Box/stats.tscn" id="7_7t66n"]
[ext_resource type="AudioStream" uid="uid://1ji7u6dji25x" path="res://art/Music and Sounds/Bat/Bat.mp3" id="8_qc6r7"]
[ext_resource type="AudioStream" uid="uid://chwcwxwxiaci5" path="res://art/Music and Sounds/Bat/Attacked.mp3" id="9_8tw3m"]
[ext_resource type="Texture2D" uid="uid://c4pfohrmn4j1j" path="res://art/Effects/Particle/particle.png" id="10_mebkg"]
[ext_resource type="Texture2D" uid="uid://de3syths5knky" path="res://UI/Textures/Enemy Healthbar/bar.png" id="11_nsl6n"]
[ext_resource type="Texture2D" uid="uid://pelhkmr0twlh" path="res://UI/Textures/Enemy Healthbar/spr_enemy_health_bar_frame.png" id="12_heowf"]
[ext_resource type="Texture2D" uid="uid://bxf5620tcb33j" path="res://UI/Textures/Enemy Healthbar/spr_enemy_health_bar_frame _damage.png" id="13_8m126"]
[ext_resource type="Texture2D" uid="uid://0kgwim8bo2g2" path="res://UI/Textures/toxic.png" id="14_i0vgs"]
[ext_resource type="Script" path="res://script/Enemy/Boss/FiniteStateMachine.gd" id="15_s83vt"]
[ext_resource type="Script" path="res://mobs/states/Moving.gd" id="16_kqs4w"]
[ext_resource type="Script" path="res://mobs/states/FollowAttack.gd" id="17_0h8mf"]
[ext_resource type="Script" path="res://mobs/states/Attack.gd" id="18_6tgrc"]
[ext_resource type="Shader" path="res://art/Shader/freeze.gdshader" id="19_ddkd7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hh713"]
shader = ExtResource("19_ddkd7")
shader_parameter/blink = false
shader_parameter/freeze = false
shader_parameter/freeze_color = Color(0.365897, 0.562772, 1, 1)
shader_parameter/freeze_intensity = 0.7

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_opkql"]
radius = 6.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e5kh5"]
radius = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_25hc2"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0fu2k"]
radius = 2.99978
height = 7.9994

[sub_resource type="CircleShape2D" id="CircleShape2D_sv5x2"]
radius = 164.027

[sub_resource type="Animation" id="Animation_coq8p"]
resource_name = "Blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1lj64")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_egnm8"]
resource_name = "Freeze"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/freeze")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_01e47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1lj64")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_825r0"]
resource_name = "UnFreeze"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/freeze")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yqu6"]
_data = {
"Blink": SubResource("Animation_coq8p"),
"Freeze": SubResource("Animation_egnm8"),
"RESET": SubResource("Animation_01e47"),
"UnFreeze": SubResource("Animation_825r0")
}

[sub_resource type="Curve" id="Curve_pw1jr"]
_data = [Vector2(0, 0.35061), 0.0, 0.0, 0, 0, Vector2(0.14, 0.992886), 0.0, 0.0, 0, 0, Vector2(1, 0.221545), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_idpgb"]
curve = SubResource("Curve_pw1jr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m8yyd"]
emission_shape = 1
emission_sphere_radius = 8.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_idpgb")

[sub_resource type="Animation" id="Animation_qer2y"]
resource_name = "Freeze"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_ddkd7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gm6ts"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_ddkd7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1h7nh"]
resource_name = "Unfreeze"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7llb5"]
_data = {
"Freeze": SubResource("Animation_qer2y"),
"RESET": SubResource("Animation_gm6ts"),
"Unfreeze": SubResource("Animation_1h7nh")
}

[sub_resource type="Animation" id="Animation_b6j6y"]
resource_name = "Attack"
length = 1.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_yof0k"]
resource_name = "Idle"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w621b"]
resource_name = "Move"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8xgwk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qw7tw"]
resource_name = "def"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etekf"]
_data = {
"Attack": SubResource("Animation_b6j6y"),
"Idle": SubResource("Animation_yof0k"),
"Move": SubResource("Animation_w621b"),
"RESET": SubResource("Animation_8xgwk"),
"def": SubResource("Animation_qw7tw")
}

[node name="Slime" type="CharacterBody2D"]
process_mode = 1
y_sort_enabled = true
collision_layer = 67109538
collision_mask = 67108865
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_o2gk8")
maxSpeed = 60
MAXHEALT = 120

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_hh713")
position = Vector2(0, 5)
texture = ExtResource("3_wnixq")
offset = Vector2(0, -12)
hframes = 14
vframes = 3

[node name="hitBox" parent="." instance=ExtResource("5_jst8g")]
position = Vector2(0, 5)
collision_layer = 8
damage = 3

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_opkql")
debug_color = Color(0.864585, 0.000595089, 0.864113, 0.42)

[node name="swordHitBox" parent="." instance=ExtResource("5_jst8g")]
position = Vector2(0, 5)
collision_layer = 8
damage = 20

[node name="CollisionShape2D" parent="swordHitBox" index="0"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_e5kh5")
debug_color = Color(0.864585, 0.000595089, 0.864113, 0.42)

[node name="HurtBox2" parent="." instance=ExtResource("6_q4xxe")]
position = Vector2(0, 5)
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox2" index="0"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_25hc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.86264e-09, -9)
rotation = -4.70017
shape = SubResource("CapsuleShape2D_0fu2k")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8388608
collision_mask = 8389120

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_sv5x2")
debug_color = Color(0.756863, 0.380392, 0.643137, 0.419608)

[node name="Stats" parent="." instance=ExtResource("7_7t66n")]
maxHealt = 3

[node name="Ambiente" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 5)
stream = ExtResource("8_qc6r7")
autoplay = true
max_distance = 100.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 5)
stream = ExtResource("9_8tw3m")
max_distance = 100.0

[node name="Blink" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1yqu6")
}

[node name="Origin" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="HitParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -10)
emitting = false
amount = 6
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_m8yyd")
texture = ExtResource("10_mebkg")
lifetime = 0.3
one_shot = true
preprocess = 0.03
explosiveness = 0.8
randomness = 0.59
local_coords = true

[node name="Bar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = -1
offset_left = -21.0
offset_top = -31.0
offset_right = 14.0
offset_bottom = -20.0
texture_over = ExtResource("11_nsl6n")

[node name="HPBar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = -1
z_as_relative = false
offset_left = -13.0
offset_top = -31.0
offset_right = 22.0
offset_bottom = -20.0
size_flags_vertical = 8
step = 0.01
value = 100.0
texture_progress = ExtResource("12_heowf")
metadata/_edit_group_ = true

[node name="DamageBar" type="TextureProgressBar" parent="HPBar"]
show_behind_parent = true
z_index = 10
z_as_relative = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 11.0
size_flags_vertical = 8
texture_progress = ExtResource("13_8m126")

[node name="Timer" type="Timer" parent="HPBar"]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="Poison" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -25)
texture = ExtResource("14_i0vgs")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -3)

[node name="FiniteStateMachine" type="Node2D" parent="."]
position = Vector2(0, 5)
script = ExtResource("15_s83vt")

[node name="Moving" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("animation_player")]
script = ExtResource("16_kqs4w")
animation_player = NodePath("../../Sprite")

[node name="Follow" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("animation_player")]
script = ExtResource("17_0h8mf")
animation_player = NodePath("../../Sprite")

[node name="Attack" type="Node2D" parent="FiniteStateMachine" node_paths=PackedStringArray("hitBox", "attackPlayer")]
script = ExtResource("18_6tgrc")
hitBox = NodePath("../../swordHitBox/CollisionShape2D")
attackPlayer = NodePath("../../Sprite")

[node name="MovingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="StopMoving" type="Timer" parent="MovingTimer"]
wait_time = 2.0
one_shot = true

[node name="UnFreeze" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Freeze" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7llb5")
}

[node name="Sprite" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etekf")
}

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="hurt" from="HurtBox2" to="." method="_on_hurt_box_2_hurt"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="HPBar/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MovingTimer" to="." method="_on_moving_timer_timeout"]
[connection signal="timeout" from="MovingTimer/StopMoving" to="." method="_on_stop_moving_timeout"]
[connection signal="timeout" from="UnFreeze" to="." method="_on_un_freeze_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]

[editable path="hitBox"]
[editable path="swordHitBox"]
[editable path="HurtBox2"]
